Empty text is default color

--- a/src/app/modules/landing/home/home.component.html
+++ b/src/app/modules/landing/home/home.component.html
@@ -35,7 +35,7 @@
             <ng-template #noZone>
                 <div class="flex">
                     <curved-arrow class="hidden md:block"></curved-arrow>
-                    <p class="text-red-600">Select a zone to start.</p>
+                    <p>Select a zone to start.</p>
                 </div>
             </ng-template>
         </div>
