--- a/src/app/layout/layouts/empty/empty.component.html
+++ b/src/app/layout/layouts/empty/empty.component.html
@@ -9,6 +9,7 @@
             class="w-20"
             ngSrc="assets/images/logo/logo.png"
             alt="EWBS LOGO" height="80" width="201">
+        <h1 class="text-3xl pt-2 font-bold pl-2 text-gray-600">ACTIVITIES</h1>
     </div>
     <!-- Content -->
     <div class="flex flex-col flex-auto">
