--- a/src/app/modules/landing/home/home.component.html
+++ b/src/app/modules/landing/home/home.component.html
@@ -6,7 +6,7 @@
                 <ng-container *ngIf="zones$ | async as zones">
                     <ng-container *ngFor="let zone of zones; let i = index; trackBy: trackByFn">
                         <div
-                            class="flex flex-col items-center justify-center py-2 px-1 rounded-2xl dark:bg-white dark:bg-opacity-5 cursor-pointer {{(isSelectedZone(zone)) ? 'border-4 border-solid shadow-2xl' : ''}}"
+                            class="flex flex-col items-center justify-center py-2 px-1 rounded-2xl dark:bg-white dark:bg-opacity-5 cursor-pointer border-4 {{(isSelectedZone(zone)) ? 'border-solid shadow-2xl' : 'border-transparent'}}"
                             [style.background-color]="zone.color"
                             [style.border-color]="getComputedDarkerColor(zone)"
                             (click)="selectZone(zone)"
