--- a/src/app/modules/landing/home/home.component.html
+++ b/src/app/modules/landing/home/home.component.html
@@ -6,7 +6,7 @@
                 <ng-container *ngIf="zones$ | async as zones">
                     <ng-container *ngFor="let zone of zones; let i = index; trackBy: trackByFn">
                         <div
-                            class="flex flex-col items-center justify-center py-2 px-1 rounded-2xl dark:bg-white dark:bg-opacity-5 cursor-pointer border-4 {{(isSelectedZone(zone)) ? 'border-solid shadow-2xl' : 'border-transparent'}}"
+                            class="flex flex-col items-center justify-center py-2 px-1 rounded-2xl dark:bg-white dark:bg-opacity-5 cursor-pointer border-4 {{(isSelectedZone(zone)) ? 'border-solid shadow-2xl' : 'border-transparent'}} hover:shadow-2xl"
                             [style.background-color]="zone.color"
                             [style.border-color]="getComputedDarkerColor(zone)"
                             (click)="selectZone(zone)"
@@ -29,15 +29,19 @@
             </div>
         </div>
     </div>
-    <div class="w-full max-w-3xl h-full flex items-center justify-center font-medium">
-        <div class="max-w-none mx-auto prose prose-sm">
-            <p *ngIf="selectedZone; else noZone">A table will appear here</p>
-            <ng-template #noZone>
+    <ng-container *ngIf="selectedZone; else noZone">
+        <div class="w-full h-full">
+            <activities-table class="w-full h-full"></activities-table>
+        </div>
+    </ng-container>
+    <ng-template #noZone>
+        <div class="w-full max-w-3xl h-full flex items-center justify-center font-medium">
+            <div class="max-w-none mx-auto prose prose-sm">
                 <div class="flex">
                     <curved-arrow class="hidden md:block"></curved-arrow>
                     <p>Select a zone to start.</p>
                 </div>
-            </ng-template>
+            </div>
         </div>
-    </div>
+    </ng-template>
 </div>
