--- a/src/app/shared/activities-table/activities-table.component.html
+++ b/src/app/shared/activities-table/activities-table.component.html
@@ -41,6 +41,7 @@
                         matColumnDef="code"
                         sticky>
                         <th
+                            class="w-[10%]"
                             mat-header-cell
                             *matHeaderCellDef>
                             Code
@@ -57,6 +58,7 @@
                     <!-- Name -->
                     <ng-container matColumnDef="name">
                         <th
+                            class="w-[80%]"
                             mat-header-cell
                             *matHeaderCellDef>
                             Name
@@ -73,6 +75,7 @@
                     <!-- Actions -->
                     <ng-container matColumnDef="actions">
                         <th
+                            class="w-[10%]"
                             mat-header-cell
                             *matHeaderCellDef>
                             Actions
